Closed Bug 1896902 Opened 2 years ago Closed 2 years ago

Perma [tier 2] /builds/worker/checkouts/gecko/gfx/2d/HelpersD2D.h:895:5: error: use of undeclared identifier '_controlfp_s'

Categories

(Core :: Graphics, defect)

defect

Tracking

()

RESOLVED FIXED
128 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox126 --- unaffected
firefox127 --- unaffected
firefox128 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: lsalzman)

References

(Regression)

Details

(Keywords: intermittent-failure, regression, Whiteboard: [stockwell needswork:owner])

Attachments

(1 file)

Filed by: ncsoregi [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=458277186&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/RFm4jK_USbqIAx1jn5AKjw/runs/0/artifacts/public/logs/live_backing.log


[task 2024-05-15T13:13:34.673Z] 13:13:34     INFO -  In file included from /builds/worker/workspace/obj-build/dist/include/mozilla/TimeStamp.h:27:
[task 2024-05-15T13:13:34.673Z] 13:13:34  WARNING -  /builds/worker/workspace/obj-build/dist/include/mozilla/TimeStamp_windows.h:62:26: warning: 'dllimport' attribute ignored on inline function [-Wignored-attributes]
[task 2024-05-15T13:13:34.673Z] 13:13:34     INFO -     62 |   constexpr MOZ_IMPLICIT MFBT_API TimeStampValue(uint64_t aGTCAndQPC)
[task 2024-05-15T13:13:34.673Z] 13:13:34     INFO -        |                          ^
[task 2024-05-15T13:13:34.674Z] 13:13:34     INFO -  /builds/worker/workspace/obj-build/dist/include/mozilla/Types.h:101:24: note: expanded from macro 'MFBT_API'
[task 2024-05-15T13:13:34.674Z] 13:13:34     INFO -    101 | #      define MFBT_API MOZ_IMPORT_API
[task 2024-05-15T13:13:34.674Z] 13:13:34     INFO -        |                        ^
[task 2024-05-15T13:13:34.674Z] 13:13:34     INFO -  /builds/worker/workspace/obj-build/dist/include/mozilla/Types.h:63:39: note: expanded from macro 'MOZ_IMPORT_API'
[task 2024-05-15T13:13:34.674Z] 13:13:34     INFO -     63 | #    define MOZ_IMPORT_API __declspec(dllimport)
[task 2024-05-15T13:13:34.674Z] 13:13:34     INFO -        |                                       ^
[task 2024-05-15T13:13:34.674Z] 13:13:34     INFO -  In file included from /builds/worker/checkouts/gecko/gfx/2d/ConicGradientEffectD2D1.cpp:12:
[task 2024-05-15T13:13:34.674Z] 13:13:34    ERROR -  /builds/worker/checkouts/gecko/gfx/2d/HelpersD2D.h:895:5: error: use of undeclared identifier '_controlfp_s'
[task 2024-05-15T13:13:34.674Z] 13:13:34     INFO -    895 |     _controlfp_s(&savedFPSetting, 0, 0);
[task 2024-05-15T13:13:34.674Z] 13:13:34     INFO -        |     ^
[task 2024-05-15T13:13:34.674Z] 13:13:34    ERROR -  /builds/worker/checkouts/gecko/gfx/2d/HelpersD2D.h:898:27: error: use of undeclared identifier '_CW_DEFAULT'
[task 2024-05-15T13:13:34.674Z] 13:13:34     INFO -    898 |     _controlfp_s(&unused, _CW_DEFAULT, MCW_PC);
[task 2024-05-15T13:13:34.675Z] 13:13:34     INFO -        |                           ^
[task 2024-05-15T13:13:34.675Z] 13:13:34    ERROR -  /builds/worker/checkouts/gecko/gfx/2d/HelpersD2D.h:898:40: error: use of undeclared identifier 'MCW_PC'
[task 2024-05-15T13:13:34.676Z] 13:13:34     INFO -    898 |     _controlfp_s(&unused, _CW_DEFAULT, MCW_PC);
[task 2024-05-15T13:13:34.676Z] 13:13:34     INFO -        |                                        ^
[task 2024-05-15T13:13:34.676Z] 13:13:34    ERROR -  /builds/worker/checkouts/gecko/gfx/2d/HelpersD2D.h:903:43: error: use of undeclared identifier 'MCW_PC'
[task 2024-05-15T13:13:34.677Z] 13:13:34     INFO -    903 |     _controlfp_s(&unused, savedFPSetting, MCW_PC);
[task 2024-05-15T13:13:34.677Z] 13:13:34     INFO -        |                                           ^
[task 2024-05-15T13:13:34.677Z] 13:13:34     INFO -  2 warnings and 4 errors generated.
[task 2024-05-15T13:13:34.678Z] 13:13:34    ERROR -  gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:688: ConicGradientEffectD2D1.o] Error 1
Flags: needinfo?(lsalzman)

It looks like there was some header bootlegging happening that was recently
impacted by a Skia update. This adds the missing float header.

Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
Pushed by lsalzman@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e0f5b5d7c4f7 Fix missing float header in HelpersD2D. r=aosmond

@Lee, the other error's aren't happenning anymore,after your patch landed but this error popped up -> ld.lld: error: undefined symbol: PKEY_Link_Arguments
Could you take a look?

Flags: needinfo?(lsalzman)

That's not from my bug, I believe. If you look at this try run from before Skia update, you can see it is still fallout from bug 1895428 - https://treeherder.mozilla.org/jobs?repo=try&revision=1667e1cc40b8ad8ed178f1e9938b09f3f85dceb5&selectedTaskRun=YEL2EzDwTe6t-05e4phWcw.0

Flags: needinfo?(lsalzman) → needinfo?(jteh)

@Lee, thank you for looking into it
I filed bug 1896965 to track this failure.

Set release status flags based on info from the regressing bug 1890216

Flags: needinfo?(jteh)
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 128 Branch
See Also: → 1896965
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: