Bug 1896902 - Fix missing float header in HelpersD2D. r=aosmond

It looks like there was some header bootlegging happening that was recently
impacted by a Skia update. This adds the missing float header.

Differential Revision: https://phabricator.services.mozilla.com/D210500